@@ -1,5 +1,16 @@
 2014-06-18  Tom Tromey  <tromey@redhat.com>
 
+	* common/linux-ptrace.c (additional_flags): New global.
+	(linux_test_for_tracesysgood, linux_test_for_tracefork): Use
+	additional_flags; don't check GDBSERVER.
+	(linux_ptrace_set_additional_flags): New function.
+	* common/linux-ptrace.h (linux_ptrace_set_additional_flags):
+	Declare.
+	* linux-nat.c (_initialize_linux_nat): Call
+	linux_ptrace_set_additional_flags.
+
+2014-06-18  Tom Tromey  <tromey@redhat.com>
+
 	* common/errors.h: New file.
 	* utils.h: Include errors.h.
 	(perror_with_name, error, fatal, warning): Don't declare.
